# escrow-bridge-core

./: .env.sample  .gitignore  Dockerfile  README.md  cli.py  docker-compose.yml
backend/: API_KEY_SETUP.md  README.md  admin_cli.py  chainsettle_config.json  cli.py  docker.txt  dockerfile  escrow_bridge.py  main.py  pyproject.toml
backend/abi/: escrowBridgeAbi.json
backend/escrow_bridge/: __init__.py  config.py  core.py
backend/escrow_bridge/cli/: __init__.py  admin.py  main.py  style.py
backend/escrow_bridge/db/: __init__.py  models.py
backend/solidity/: Constructor.txt  deploy_contract.py
backend/solidity/contracts/: EscrowBridge.sol
backend/templates/: index.html
backend/tests/: test1.py  test2.py  test3.py  test4.py  test5.py  test6.py  test7.py  test8.py  test_async_sdk.py  test_sdk.py
cli/: .dockerignore  Dockerfile.admin  README.md
contracts/: foundry.toml
contracts/deployments/: TestUSDC.json  base-escrow-bridge.json  blockdag-escrow-bridge.json
contracts/src/: DocusignEscrow.sol  EscrowBridge.sol  EscrowBridgeETH.sol  TestUSDC.sol
frontend/: README.md
frontend/settlement-ui/: package-lock.json  package.json  tailwind.config.js
frontend/settlement-ui/pages/: index.tsx
frontend/settlement-ui/src/abi/: EscrowBridge.json
frontend/settlement-ui/src/components/: SettlementInitForm.tsx
frontend/settlement-ui/src/components/ui/: button.tsx  input.tsx
notes/: startup.txt
